<?xml version="1.0"?>
<package>
  <name>rosjava_osrf</name>
  <version>0.1.0</version>
  <description>
    Zeroconf and App Manager stuff for Android.
  </description>
  <url>http://ros.org/wiki/rosjava_osrf</url>
  <maintainer email="sarah@osrfoundation.org">Sarah Elliott</maintainer>
  <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosjava_bootstrap</build_depend>
    <build_depend>rosjava_build_tools</build_depend>
</package>
